--- a/KoChain/KoChain.Api/KoChain.Api.csproj
+++ b/KoChain/KoChain.Api/KoChain.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NBitcoin" Version="9.0.0" />
+    <PackageReference Include="NBXplorer.Client" Version="5.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
