--- a/KoChain/KoChain.Core/KoChain.Core.csproj
+++ b/KoChain/KoChain.Core/KoChain.Core.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="NBitcoin" Version="9.0.0" />
+    <PackageReference Include="NBXplorer.Client" Version="5.0.5" />
   </ItemGroup>
 
 </Project>
